[gd_scene load_steps=20 format=2]

[ext_resource path="res://enemy/enemy4/default.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy4/SmallFlyerEnemy.gd" type="Script" id=2]
[ext_resource path="res://others/lifebar/Lifebar.tscn" type="PackedScene" id=3]
[ext_resource path="res://others/explosion/ex_5.png" type="Texture" id=4]
[ext_resource path="res://others/explosion/ex_1.png" type="Texture" id=5]
[ext_resource path="res://others/explosion/ex_3.png" type="Texture" id=6]
[ext_resource path="res://others/explosion/ex_6.png" type="Texture" id=7]
[ext_resource path="res://others/explosion/ex_2.png" type="Texture" id=8]
[ext_resource path="res://others/explosion/ex_7.png" type="Texture" id=9]
[ext_resource path="res://others/explosion/ex_4.png" type="Texture" id=10]
[ext_resource path="res://others/explosion/ex_8.png" type="Texture" id=11]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 28 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 364, 186.169 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.4185, 45.6521 )

[sub_resource type="Animation" id=7]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "flash"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="SmallFlyerEnemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Lifebar" parent="." instance=ExtResource( 3 )]
margin_left = -82.0
margin_top = -62.0
margin_right = 465.0
margin_bottom = 2.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="Explosion" type="Node2D" parent="."]
visible = false
position = Vector2( -23, -78 )
scale = Vector2( 0.227539, 0.227539 )

[node name="1" type="AnimatedSprite" parent="Explosion"]
modulate = Color( 0.607843, 1, 0, 1 )
position = Vector2( 70.3176, 325.219 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 8 )

[node name="DetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="AreaShape" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 2 )

[node name="LeftDamageArea" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2( -1, 53 )
scale = Vector2( 0.613333, 0.613334 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDamageArea"]
position = Vector2( -21.1957, -86.4129 )
shape = SubResource( 3 )

[node name="RightDamageArea" type="Area2D" parent="." groups=["hitbox"]]
position = Vector2( -1, 53 )
scale = Vector2( 0.613333, 0.613334 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDamageArea"]
position = Vector2( 24.0489, -86.4129 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/flash = SubResource( 4 )

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="area_entered" from="LeftDamageArea" to="." method="_on_LeftDamageArea_area_entered"]
[connection signal="area_entered" from="RightDamageArea" to="." method="_on_RightDamageArea_area_entered"]
